# openai_gui_rust

./: .gitignore  Cargo.toml  README.md
src/: aud.rs  main.rs  q_logic.rs
